--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
     "new_week_df.set_title=\"Total Fare by City Type\"\n",
     "\n",
     "#plt.savefig(\"add a path and figure extension\"\n",
-    "plt.savefig(\"analysis/PyBer_fare_summary.png.png\")\n",
+    "plt.savefig(\"analysis/PyBer_fare_summary.png\")\n",
     "plt.grid()\n",
     "plt.show()    "
    ]
